--- a/Walking Dinner (asp.net)/Walking Dinner (asp.net).csproj
+++ b/Walking Dinner (asp.net)/Walking Dinner (asp.net).csproj
@@ -248,6 +248,7 @@
     <Compile Include="Models\admin.cs" />
     <Compile Include="Models\adminlogindata.cs" />
     <Compile Include="Models\adminparallel.cs" />
+    <Compile Include="Models\combinedmodels.cs" />
     <Compile Include="Models\persoondata.cs" />
     <Compile Include="Models\persoondataparallel.cs" />
     <Compile Include="Models\WalkingDinner.cs" />
@@ -261,11 +262,13 @@
     <Content Include="images\background.jpg" />
     <Content Include="images\button_aanmelden.png" />
     <Content Include="images\button_admin-login.png" />
+    <Content Include="images\button_login %281%29.png" />
     <Content Include="images\button_meld-je-aan.png" />
     <Content Include="images\button_terug-keren.png" />
     <Content Include="images\icons8-checked-checkbox-96.png" />
     <Content Include="images\icons8-unchecked-checkbox-96.png" />
     <Content Include="images\layout addpage2.png" />
+    <Content Include="images\login background.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
