--- a/Walking Dinner (asp.net)/Views/Web.config
+++ b/Walking Dinner (asp.net)/Views/Web.config
@@ -8,6 +8,10 @@
     </sectionGroup>
   </configSections>
 
+   
+
+ 
+  
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     <pages pageBaseType="System.Web.Mvc.WebViewPage">
@@ -36,6 +40,8 @@
   <system.web>
     <compilation>
       <assemblies>
+        <add assembly="netstandard, Version=2.0.0.0, Culture=neutral, 
+            PublicKeyToken=cc7b13ffcd2ddd51"/>
         <add assembly="System.Web.Mvc, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
